--- a/src/pages/journeys.astro
+++ b/src/pages/journeys.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import NavLinkShowcase from '../components/NavLinkShowcase.astro';
 ---
 
 <Layout title="Sample Journeys" description="Explore our signature journey inspirations - curated itineraries that showcase the depth of what Bali Encore can create for you.">
@@ -424,6 +425,8 @@ import Layout from '../layouts/Layout.astro';
       </div>
     </div>
   </section>
+
+  <NavLinkShowcase heading="Navigate Our Core Experiences" theme="light" />
 
   <!-- Journey 3: Island Hopping -->
   <section id="island-hopping" class="section-padding bg-stone-50">
